# tg_ai_poster

./: .env.example  .gitignore  =11.0.0  AGENT_DESIGN_DOC.md  CLAUDE.md  DEPLOY-FLY.md  DEPLOY.md  Dockerfile  LICENSE  README.md  USER_GUIDE.md  alembic.ini  config.yaml  docker-compose.simple.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt  setup.py
.serena/: project.yml
admin_bot/: __init__.py  admin_bot.py  commands.py  keyboards.py  messages.py
agents/: __init__.py
alembic/: env.py
api/: server.py
backup/: __init__.py  backup_manager.py  restore_manager.py
config/: banned_phrases.yaml  banned_words.json  domain_trust.json  post_templates.py  post_templates.yaml  tech_jargon.yaml
core/: __init__.py  config.py  constants.py  events.py  health.py  logger.py  result.py  scheduler.py  watchdog.py
deploy/: healthcheck.sh  setup-server.sh
docs/: INDEX.md  PIPELINE_UPDATE.md  PRODUCTION_AUDIT_100.md  ROADMAP.md  SECURITY.md  v2.0_CHANGES.md
domain/: __init__.py  media.py  post.py  source.py
llm/: __init__.py  base.py  claude_adapter.py  claude_cli_adapter.py  deepseek_adapter.py  glm_adapter.py  openai_adapter.py
memory/: __init__.py  database.py  feedback_loop.py  models.py  post_store.py  topic_store.py  vector_store.py
pipeline/: __init__.py  ab_test_manager.py  agent_critic.py  ai_cliche_detector.py  analytics.py  approval_workflow.py  competitive_monitor.py  content_calendar.py  content_filter.py  content_recycler.py  content_validator.py  context_builder.py  coordinator.py  draft_manager.py  duplicate_checker.py  (+37 more)
(+124 files in other folders)
